2004-05-17  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b124

	* Change: Rewrite of getNextPhoto() by Adventure
	  This should be a decent speed optimization, as well as
	  fixing one edge case.  (Though I'm not sure where it was 
	  being missed in the original.) Formatting tweaks and commenting 
	  by me.

2004-05-17  Jens Tkotz <jens@peino.de>  1.4.4-cvs-b123

	* Change: Adjust Layout of upgrade_albums

	* Fix: Removed unneeded htmlentity stuff in edit_appearance.php 
	  which caused troubled in unsupported charsets.

	* Change: Some translation related changes.

2004-05-16  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.4-cvs-b122

	* Fixed a typo since -b112 in captionator.php that was preventing the
	  page from rendering.

2004-05-16  Don Willingham <donwillingham@users.sf.net> 1.4.4-cvs-b121

	* Change: Add watermark preview.  Disable links to watermark
	  album when album is empty. Alignment using X and Y coordinates
	  can use percents.
	* Fix:  Watermark alignment defaults to lower right instead of
	  nothing.  Watermarks incorrectly clipped to the bottom.

2004-05-16  Chris Kelly <ckdake@users.sf.net> 1.4.4-cvs-b120

	* Change: Users in manage_users.php are now sorted.

2004-05-15  Don Willingham <donwillingham@users.sf.net>  1.4.4-cvs-b119

	* Change: Add recursive watermark of albums.

2004-05-14  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b118

	* Change: Better missing parent detection, minor text changes

2004-05-14  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b117

	* Fix: Actually enable attachOrphans(), since I'd forgotten to pass its
	  variable

2004-05-14  Jens Tkotz <jens@peino.de> 1.4.4-cvs-b116

	* Fix: Double echo in setup/confirm.inc.
	  Thanks to Terje.

2004-05-14  Jens Tkotz <jens@peino.de> 1.4.4-cvs-b115

	*  Change: Beautification and translateable tools/find_orphans.php

2004-05-13  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b114
