@@ -21,7 +21,7 @@
     } ?>
     <?php if ($gallery->user->isAdmin() || $gallery->user->isOwnerOfAlbum($myAlbum)) { ?>
       <span class="admin">
-       <?php if ($myAlbum->lastCommentDate() != -1) { ?>
+       <?php if ($myAlbum->lastCommentDate("no") != -1) { ?>
        <br><a href="<?php echo makeGalleryUrl("view_comments.php", array("set_albumName" => $myAlbumName)) ?>">[<?php echo _("view comments for this nested album") ?>]</a>
        <?php } else {
        print "<br>"._("Album contains no comments")."\n";
